manifests: fix command in deployment

--- a/manifests/50_deployment.yaml
+++ b/manifests/50_deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - command:
-        - bugzilla-operator
+        - shodan
         - run
         - -v=9
         - --config
